# Qyvol

./: .gitignore  Cargo.toml  LICENSE  README.md  WaiOS Technical Design.md  WaiOS+Qyvol.md  cargo-audit.toml  deny.toml  index.html  rustfmt.toml  tarpaulin-report.html
.github/workflows/: rust-ci.yml
cli/: Cargo.toml
cli/plugins/: ejemplo  filtra_carpeta.lua  hola  hola.lua
cli/src/: main.rs  shell.rs
cli/src/shell/: completion.rs  context.rs  mod.rs  prompt.rs  registry.rs  system.rs  ui.rs
cli/src/shell/commands/: info.rs  mod.rs  nav.rs  scan.rs  template.rs  trait_command.rs
cli/tests/: mod.rs  utils.rs
cli/tests/shell/: mod.rs  test_cd.rs  test_edit.rs  test_mkdir.rs  test_rm.rs  test_scan.rs  test_template.rs  test_z.rs
cli/tests/tmp/scan/: mod.qyv
cli/tests/tmp/template_rust/mi_proyecto/: Cargo.toml  README.md  mi_proyecto.qyv
cli/tests/tmp/template_rust/mi_proyecto/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  manifest.rs
common/tests/: manifest_file.rs  manifest_inline.rs  manifest_success.rs
common/tests/fixtures/manifest/: hello.qyv  invalid_manifest.qyv  manifest_basic.qyv  manifest_null_fs.qyv  manifest_with_perms.qyv
common/tests/manifest/: failure.rs  file.rs  inline.rs  main.rs  success.rs
core/: Cargo.toml
docs/: CLI.md  COMPILACION.md  DESPLIEGUE.md  ESTRUCTURA.md  MANIFESTOS.md  MEJORAS_CODIGO.md  RECOMENDACIONES.md  RUNTIME.md  estructura.md  manifestos.md  runtime.md  shell.md
ejemplos_funcionales/ejemplo/: README.md  go.mod  main-go.wasm  main.go
ejemplos_funcionales/hello/: Cargo.toml  README.md  hello.component.wasm
ejemplos_funcionales/hello/src/: main.rs
examples/: hello.qyv
examples/hello/: hello.component.wasm  hello.qyv  hello.wasm
examples/main/: main-go.component.wasm  main.qyv
hello/: Cargo.toml  README.md
hello/src/: main.rs
runtime/: Cargo.toml
runtime/src/: cluster.rs  deploy.rs  executor.rs  executor_old.rs  lib.rs  printer.rs
runtime/src/executor/: engine.rs  errors.rs  loader.rs  mod.rs  runner.rs  state.rs
