[workspace]
resolver = "2"
members = ["cli", "runtime", "common", "core"]
exclude = ["hello"]

[workspace.dependencies]
# Local crates
common = { path = "common" }
runtime = { path = "runtime" }
core = { path = "core" }

# Comunes en todo el workspace
serde = { version = "=1.0.219", features = ["derive"] }
serde_yaml = { version = "=0.9.25" }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = { version = "=1.0.69" }
anyhow = "1.0"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
colored = "2"
rustyline = "14.0"
ring = "0.17"
time = "0.3.41"
rand = "0.8.5"
strip-ansi-escapes = "0.2"

# Testing
assert_cmd = "2.0"
predicates = "3.1.3"

# WebAssembly runtime
wasmtime = { version = "25.0.3", features = ["component-model"] }
wasmtime-wasi = "25.0.3"


bitflags = { version = "=2.9.1" }

rustix = { version = "=1.0.7" }
hashbrown = { version = "=0.14.5" }
unicode-width = { version = "=0.2.1" }