[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2"
runtime = { path = "../runtime" }
common = { path = "../common" }
qyvol-core = { path = "../core" }
rustyline = "14.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
reqwest = { version = "0.11", features = ["blocking"] }
ring = "0.17"
time = "0.3.36"
strip-ansi-escapes = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.0"

[[bin]]
name = "qyv"
path = "src/main.rs"
