[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
runtime = { workspace = true }
common = { workspace = true }
rustyline = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
time = { workspace = true }
strip-ansi-escapes = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
fs_extra = { workspace = true }

[[bin]]
name = "qyv"
path = "src/main.rs"