[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "25.0.0", features = ["component-model"] }
wasmtime-wasi = "25.0.0"

common = { path = "../common" }
qyvol-core = { path = "../core" }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rand = "0.8.5"
anyhow = "1.0"
