[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
common = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
